sources = [
  'dwarf_abbrev.c',
  'dwarf_alloc.c',
  'dwarf_arange.c',
  'dwarf_crc32.c',
  'dwarf_debuglink.c',
  'dwarf_die_deliv.c',
  'dwarf_debug_names.c',
  'dwarf_debug_sup.c',
  'dwarf_dsc.c',
  'dwarf_elf_access.c',
  'dwarf_elf_load_headers.c',
  'dwarf_elfread.c',
  'dwarf_elf_rel_detector.c',
  'dwarf_error.c',
  'dwarf_fission_to_cu.c',
  'dwarf_form.c',
  'dwarf_frame.c',
  'dwarf_frame2.c',
  'dwarf_funcs.c',
  'dwarf_gdbindex.c',
  'dwarf_generic_init.c',
  'dwarf_global.c',
  'dwarf_gnu_index.c',
  'dwarf_groups.c',
  'dwarf_harmless.c',
  'dwarf_init_finish.c',
  'dwarf_leb.c',
  'dwarf_line.c',
  'dwarf_loc.c',
  'dwarf_locationop_read.c',
  'dwarf_loclists.c',
  'dwarf_machoread.c',
  'dwarf_macro.c',
  'dwarf_macro5.c',
  'dwarf_names.c',
  'dwarf_object_detector.c',
  'dwarf_object_read_common.c',
  'dwarf_original_elf_init.c',
  'dwarf_peread.c',
  'dwarf_print_lines.c',
  'dwarf_pubtypes.c',
  'dwarf_query.c',
  'dwarf_ranges.c',
  'dwarf_rnglists.c',
  'dwarf_str_offsets.c',
  'dwarfstring.c',
  'dwarf_stringsection.c',
  'dwarf_tied.c',
  'dwarf_tsearchhash.c',
  'dwarf_types.c',
  'dwarf_util.c',
  'dwarf_vars.c',
  'dwarf_weaks.c',
  'dwarf_xu_index.c',
  'crc32.c',
  'malloc_check.c',
  'pro_alloc.c',
  'pro_arange.c',
  'pro_debug_sup.c',
  'pro_die.c',
  'pro_dnames.c',
  'pro_encode_nm.c',
  'pro_error.c',
  'pro_expr.c',
  'pro_finish.c',
  'pro_forms.c',
  'pro_frame.c',
  'pro_funcs.c',
  'pro_init.c',
  'pro_line.c',
  'pro_log_extra_flag_strings.c',
  'pro_macinfo.c',
  'pro_pubnames.c',
  'pro_reloc.c',
  'pro_reloc_stream.c',
  'pro_reloc_symbolic.c',
  'pro_section.c',
  'pro_types.c',
  'pro_vars.c',
  'pro_weaks.c',
]

install_headers('dwarf.h', subdir: 'libdwarf')
sources += custom_target('libdwarf.h',
  input: 'libdwarf.h.in',
  output: 'libdwarf.h',
  command: [
    fix_libdwarf_elf,
    '@INPUT@',
    '@OUTPUT@',
  ],
  install: true,
  install_dir: get_option('includedir') / 'libdwarf'
)

libdwarf = library('dwarf', sources,
  version: library_version,
  darwin_versions: darwin_versions,
  include_directories: libdwarf_internal_incdirs,
  dependencies: [libelf_dep, zlib_dep],
  install: true,
)
libdwarf_dep = declare_dependency(
  link_with: libdwarf,
  include_directories: include_directories('.'),
)

pkg = import('pkgconfig')
pkg.generate(libdwarf,
  name: 'libdwarf',
  description: 'DWARF debug symbols library',
  subdirs: ['libdwarf'],
)

meson.override_dependency('libdwarf', libdwarf_dep)
